--- a/dev/vue-project/src/todo/v3.2.0/pages/page1/views/Home/home.scss
+++ b/dev/vue-project/src/todo/v3.2.0/pages/page1/views/Home/home.scss
@@ -9,9 +9,9 @@
 .bg-box{
   width:rem(750);
   height:rem(700);
-  background: url("~pages/page1/assets/images/logo.png") repeat;
+  background: url("@/pages/page1/assets/images/logo.png") repeat;
 }
 
-.sprite_home{
+.sprite_page1_home{
   display: block;
 }
