--- a/dev/vue-project/src/todo/v3.2.0/pages/page2/views/Home/home.scss
+++ b/dev/vue-project/src/todo/v3.2.0/pages/page2/views/Home/home.scss
@@ -9,7 +9,7 @@
 .bg-box{
   width:rem(750);
   height:rem(700);
-  background: url("~pages/page1/assets/images/logo.png") repeat;
+  background: url("$pages/page1/assets/images/logo.png") repeat;
 }
 
 .sprite_home{
